#86951 fix price not displayed when a configurable product doesn't have swatches, don't display final price as special if selected option doesn't have old price, use `opacity-0` instead of `display-none` to avoid jumping content on load

--- a/Snowdog_Components/components/Atoms/atomic/_atomic.scss
+++ b/Snowdog_Components/components/Atoms/atomic/_atomic.scss
@@ -504,6 +504,10 @@
     }
 }
 
+.opacity-0 {
+    opacity: 0;
+}
+
 .position-relative {
     position: relative;
 }
